# FreeFem-sources

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  configure.ac  strversionnumber.cpp
.github/: CI.md
.github/workflows/: full-mpich.yml  full-msmpi.yml  full-openmpi.yml  job4-mpich.yml  minimal.yml  release-deb-2204.yml  release-deb-2404.yml  release-dmg-arm.yml  release-dmg.yml  release-exe.yml  release.yml  sequential.yml  test-download.yml
cmake/: config_cmake.h.in
cmake/modules/: ff_check_required_dependencies.cmake  ff_configure_compilers.cmake  ff_configure_config_header.cmake  ff_create_strversionnumber.cmake  ff_define_freefem_executable.cmake  ff_define_libff_library.cmake  ff_define_strversionnumber_library.cmake  ff_write_config_file.cmake
etc/actions/: failed_tests_logs.sh
etc/actions/macos/: link_fortran.sh
etc/actions/release/macos/: compile_hdf5.sh
etc/config/m4/: WindowsPackage.m4  acmpi.m4  ax_lib_hdf5.m4
examples/3d/: Makefile.am
examples/bem/: Makefile.am
examples/eigen/: Makefile.am
examples/examples/: Makefile.am
examples/ffddm/: Helmholtz-2d-all.edp  Makefile.am
examples/hpddm/: helmholtz-2d-PETSc-complex.edp  helmholtz-3d-line-PETSc-complex.edp  helmholtz-dense-3d-line-PETSc-complex.edp  maxwell-2d-PETSc.edp  navier-stokes-2d-SLEPc-complex.edp  newton-2d-PETSc.edp
examples/mpi/: Makefile.am
examples/plugin/: Makefile.am
idp/: ffddm.idp  ffddm_functions.idp  ffddm_geneoCS.idp  ffddm_geneoCS_3rdlvl.idp  ffddm_partitioning.idp  macro_ddm.idp
plugin/mpi/: MUMPS.cpp  MUMPS_mpi.cpp  PETSc-code.hpp  PETSc.hpp  RadiativeTransfer_htool.cpp  SLEPc-code.hpp  bem.cpp  bem.hpp  common_bem.hpp  common_hpddm.hpp
plugin/seq/: ClosePoints.cpp  MUMPS.cpp  MUMPS_seq.cpp  MatrixMarket.cpp  bfstream.cpp  ff-get-dep.in  iovtk.cpp  lapack.cpp  load.link.in
src/: CMakeLists.txt
src/Graphics/: ffglut.cpp  getprog-unix.hpp
src/bamglib/: CMakeLists.txt  Mesh2.cpp  MeshGeom.cpp
src/femlib/: BamgFreeFem.cpp  MeshLn.cpp  VirtualSolverSparseSuite.hpp
src/fflib/: AFunction.cpp  CMakeLists.txt  array_real.cpp  array_tlp.hpp  lex.cpp  lgfem.cpp  lgmat.cpp  problem.cpp  problem.hpp  strversionnumbertest.cpp
src/lglib/: CMakeLists.txt
src/libMesh/: CMakeLists.txt
src/nw/: CMakeLists.txt
